--- a/contribution-app/package.json
+++ b/contribution-app/package.json
@@ -48,6 +48,8 @@
     "immer": ">=9.0.6",
     "postcss": "^8.2.13",
     "nanoid": ">=3.1.31",
+    "ansi-html": "^0.0.7",
+    "ansi-html-community": "^0.0.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   }
 }
